[package]
name = "casper7"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
chrono = "0.4.23"
itertools = "0.10.5"
tokio-cron-scheduler = "0.8.3"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache"]

[dependencies.tokio]
version = "1.24.1"
features = ["full"]

[dependencies.sqlx]
version = "0.6.2"
features = ["runtime-tokio-rustls", "sqlite", "chrono"]
