[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "casper7"
version = "0.0.0"
description = "the 7th version of casper, probably"
authors = ["backwardspy <backwardspy@gmail.com>"]
readme = "README.md"
repository = "https://github.com/backwardspy/casper7"

[tool.poetry.scripts]
casper7 = "casper7.run:bot"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
hikari-lightbulb = "^2.2.4"
pydantic = "^1.10.2"
rich = "^12.5.1"
APScheduler = "^3.9.1"
platformdirs = "^2.5.2"
sentry-sdk = "^1.10.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pylint = "^2.15.2"
mypy = "^0.971"
isort = "^5.10.1"
ward = "^0.66.1b0"
ipython = "^8.5.0"
# casper7-plugin-meatball-day = { path = "../casper7-plugin-meatball-day", develop = true }
# casper7-plugin-wordle-reactions = { path = "../casper7-plugin-wordle-reactions", develop = true }

[tool.poetry-dynamic-versioning]
enable = true

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.pylint.messages_control]
extension-pkg-whitelist = "pydantic"
